Replace StandardCharsets.UTF_8 with Java 8 equivalent